<resources>
    <string name="app_name">Ability to help</string>
    <string name="AD_MOB_APPLICATION_ID">ca-app-pub-5789104871210524~2010397654</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sound">Sound</string>
    <string name="guide">Guide</string>
    <string name="my_grammar">My Grammar</string>
    <string name="fun_activity">Fun Activity</string>
    <string name="my_school">My School</string>
    <string name="games">Games</string>
    <string name="pre_school_kids_learning">Pre school Learning</string>
    <string name="kids_learning">Learning</string>
    <string name="video_learning">Video learning</string>
    <string name="look_and_choose">Looks &amp; Choose</string>
    <string name="look_and_choose_quiz">Looks &amp; Choose Quiz</string>
    <string name="settings">Settings</string>
    <string name="listen_and_guess">Listen &amp; Guess</string>

    <string name="daily_routine">Daily Routine</string>
    <string name="face_expressions">Face Expressions</string>
    <string name="autism">Autism</string>
    <string name="behavior">Behaviors</string>
    <string name="learning_delay">Learning delay</string>
    <string name="speech_delay">Speech delay</string>
    <string name="odd">ODD</string>
    <string name="adhd">ADHD</string>
    <string name="more_app">More App</string>
    <string name="find_synonyms">Find synonyms</string>
    <string name="learning_from_video_song">Learning From Video Song</string>

    <string name="synonyms">Find Synonyms</string>
    <string name="antonyms_and_synonyms">Antonyms &amp; Synonyms</string>
    <string name="speech_finder">Speech Finder</string>
    <string name="grammar_genius">Grammar Genius</string>
    <string name="phrases">Phrases</string>
    <string name="Literature">Literature</string>
    <string name="dictionary">Dictionary</string>
    <string name="english_words">English Words</string>
    <string name="abbreviations">Abbreviations</string>
    <string name="machine_learning">My Machine Learning</string>
    <string name="word_image">Word Image</string>
    <string name="riddle">Riddle</string>
    <string name="periodic_table">Learn Periodic table</string>
    <string name="ask_me_anything">Ask me anything</string>
    <string name="title_activity_synonyms">SynonymsActivity</string>
    <string name="speech_to_text">Speech to text</string>

    <string name="show_answer">Show Answer</string>
    <string name="search">Search</string>
    <string name="check">Check</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
