<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GuideActivity"
    android:background="@drawable/splash"
    >
    <ImageView
        android:id="@+id/close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/options"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:src="@drawable/btn_back_150"
        />
    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="?attr/actionBarSize">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <Button
                    android:id="@+id/daily_routine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_routine"
                    android:textAllCaps="false"
                    android:theme="@style/AppTheme"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_background"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/face_expression"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/face_expressions"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:textColor="@color/colorWhite"
                    android:layout_marginBottom="10dp"
                    />
                <Button
                    android:id="@+id/autism"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/autism"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:textColor="@color/colorWhite"
                    />
                <Button
                    android:id="@+id/behaviors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/behavior"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="10dp"
                    />
                <Button
                    android:id="@+id/learning_delay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/learning_delay"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="10dp"
                    />
                <Button
                    android:id="@+id/speech_delay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_delay"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="10dp"
                    />
                <Button
                    android:id="@+id/odd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/odd"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="10dp"
                    />
                <Button
                    android:id="@+id/adhd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adhd"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>