<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FunActivity"
    android:background="@drawable/splash"
    >



    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <Button
                    android:id="@+id/machine_learning"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/atma_semibold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/machine_learning"
                    android:textAllCaps="false"
                    android:theme="@style/AppTheme" />

                <Button
                    android:id="@+id/word_image"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/atma_semibold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/word_image"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/riddleBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="18sp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/atma_semibold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/riddle"
                    android:textAllCaps="false"
                    android:layout_marginBottom="20dp"
                    />

                <Button
                    android:id="@+id/learning_periodic_table"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="18sp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/atma_semibold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/periodic_table"
                    android:textAllCaps="false"
                    android:layout_marginBottom="20dp"
                    />

                <Button
                    android:id="@+id/ask_me_anything"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="18sp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/atma_semibold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/ask_me_anything"
                    android:textAllCaps="false"
                    android:layout_marginBottom="20dp"
                    />

                <Button
                    android:id="@+id/speechToText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="18sp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/atma_semibold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/speech_to_text"
                    android:textAllCaps="false"

                    />

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/llAdView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/llAdViewFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>