<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainMenu"
    android:background="@drawable/splash"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/mySchool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_school"
                android:textAllCaps="false"
                android:theme="@style/AppTheme"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />
            <Button
                android:id="@+id/funactivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fun_activity"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"
                />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>